--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <a href="img/Oil.jpg" class="view-icon img-popup" data-gall="project"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Oil and gas</a>
-<h3><a href="project-single.html" class="tittle">Rectangular house near italy</a></h3>
+<h3><a href="project-single.html" class="tittle">Washington Headquarter Services</a></h3>
 </div>
 </div>
 <div class="project-item">
@@ -313,7 +313,7 @@
 <a href="img/project-2.jpg" class="view-icon img-popup" data-gall="project"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Energy and utility</a>
-<h3><a href="project-single.html" class="tittle">Cathedral of brasilia brasilia</a></h3>
+<h3><a href="project-single.html" class="tittle">Mineral Gap Data Center, Wise, VA</a></h3>
 </div>
 </div>
 <div class="project-item">
@@ -322,7 +322,7 @@
 <a href="img/project-3.jpg" class="view-icon img-popup" data-gall="project"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Petrochemical</a>
-<h3><a href="project-single.html" class="tittle">Harpa concert hall reykjavik</a></h3>
+<h3><a href="project-single.html" class="tittle">NAFVAC, Utility Assessment and Improvement Project, Washington, DC</a></h3>
 </div>
 </div>
 <div class="project-item">
