--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 <div class="slider-content-wrap d-flex align-items-center text-left">
 <div class="container">
 <div class="slider-content">
-<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="1s">Electrical</div></div></div>
-<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2s">We provide outstanding</div></div>
+<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="1s">Integrity</div></div></div>
+<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2s">We will earn your trust through the way our actions align with our promises to you.</div></div>
 </div>
-<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2.5s">Electrical services.</div></div></div>
-<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="3s">We have provided complete remodeling and construction solutions for <br>residential and commercial properties in cities.</div></div></div>
+<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2.5s">Inspiration</div></div></div>
+<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="3s">We want our clients and those impacted by our projects to dream <br>of better communities and lives for themselves.</div></div></div>
 <div class="dl-btn-group">
 <div class="inner-layer">
 <a href="#" class="dl-btn" data-animation="fade-in-left" data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
