--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 <div class="container">
 <div class="slider-content">
 <div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="1s">Integrity</div></div></div>
-<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2s">We will earn your trust through the way our actions align with our promises to you.</div></div>
+<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2s">We will earn your trust</div></div>
 </div>
-<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2.5s">Inspiration</div></div></div>
-<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="3s">We want our clients and those impacted by our projects to dream <br>of better communities and lives for themselves.</div></div></div>
+<div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="2.5s"></div></div></div>
+<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="3s">We will earn your trust through the way our actions align with our promises to you. <br></div></div></div>
 <div class="dl-btn-group">
 <div class="inner-layer">
 <a href="#" class="dl-btn" data-animation="fade-in-left" data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
@@ -115,11 +115,11 @@
 <div class="slider-content-wrap d-flex align-items-center text-center">
 <div class="container">
 <div class="slider-content">
-<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-top" data-delay="1s">Residencial</div></div></div>
+<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-top" data-delay="1s">Inspiration</div></div></div>
 <div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-bottom" data-delay="2s">We provide outstanding</div></div>
 </div>
 <div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-bottom" data-delay="2.5s">electrical services</div></div></div>
-<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-bottom" data-delay="3s">Providing Smart Electrical Engineering Solutions To Manage The Power System Requirements</div></div></div>
+<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-bottom" data-delay="3s">We want our clients and those impacted by our projects to dream</div></div></div>
 <div class="dl-btn-group">
 <div class="inner-layer">
 <a href="#" class="dl-btn" data-animation="fade-in-bottom" data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
@@ -135,11 +135,11 @@
 <div class="slider-content-wrap d-flex align-items-center text-right">
 <div class="container">
 <div class="slider-content">
-<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="1s">Residencial</div></div></div>
+<div class="dl-caption medium"><div class="inner-layer"><div data-animation="fade-in-left" data-delay="1s">Innovation</div></div></div>
 <div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="2s">We provide</div></div>
 </div>
 <div class="dl-caption big"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="2.5s">outstanding electrical services</div></div></div>
-<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="3s">Providing Smart Electrical Engineering Solutions To Manage The Power System Requirements</div></div></div>
+<div class="dl-caption small"><div class="inner-layer"><div data-animation="fade-in-right" data-delay="3s">We provide solutions that can overcome the challenges of today and tomorrow.</div></div></div>
 <div class="dl-btn-group">
 <div class="inner-layer">
 <a href="#" class="dl-btn" data-animation="fade-in-right" data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
@@ -156,7 +156,7 @@
 <div class="col-lg-6 sm-padding">
 <div class="about-content wow fadeInLeft">
 <h2>We set the standards others try to live up to.</h2>
-<p>J3I lives by our core principles the 3 I's - Integrity, Inspiration, and Innovation. Our Mission is to help build a world class sustainable community that inspires other businesses and the next generation to continue to improve the areas we live in.</p>
+<p>J3I lives by our core principles the 3 I's - Integrity, Inspiration, and Innovation. Our vision is to Inspire the next generation of minority engineers, develop Innovative solutions to inner city construction, and provide the utmost Integrity in all our services.</p>
 <a href="about-us.html" class="default-btn">More About Us</a>
 </div>
 </div>
