--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
 <a href="#" class="view-icon ajax-popup-link"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Refinery</a>
-<h3><a href="project-single.html" class="tittle">Rectangular transformer near italy</a></h3>
+<h3><a href="project-single.html" class="tittle">NAFVAC, Utility Assessment and Improvement Project, Washington, DC</a></h3>
 </div>
 </div>
 </div>
@@ -121,7 +121,7 @@
 <a href="#" class="view-icon"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Architecture</a>
-<h3><a href="project-single.html" class="tittle">Cathedral of brasilia brasilia</a></h3>
+<h3><a href="project-single.html" class="tittle">Mineral Gap Data Center, Wise, VA</a></h3>
 </div>
 </div>
 </div>
@@ -132,7 +132,7 @@
 <a href="#" class="view-icon"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Design</a>
-<h3><a href="project-single.html" class="tittle">Harpa concert hall reykjavik</a></h3>
+<h3><a href="project-single.html" class="tittle">Washington Headquarter Services (WHS)</a></h3>
 </div>
 </div>
 </div>
@@ -164,7 +164,7 @@
 <h4>Headquaters</h4>
 <p>P.O. Box 960 Bowie, MD 20718</p>
 <span><a href="" class="__cf_email__" data-cfemail=""></a></span>
-<span>220240-376-0</span>
+<span>240-376-0220</span>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 sm-padding">
