--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
 <div class="widget-content">
 <h4>Headquaters</h4>
 <p>P.O. Box 960 Bowie, MD 20718</p>
-<span><a href="" class="__cf_email__" data-cfemail=""></a></span>
+<span><a href="" class="" data-cfemail=""></a></span>
 <span>240-376-0220</span>
 </div>
 </div>
