--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <a href="img/Oil.jpg" class="view-icon img-popup" data-gall="project"> <i class="fas fa-expand"></i></a>
 <div class="projects-content">
 <a href="#" class="category">Oil and gas</a>
-<h3><a href="project-single.html" class="tittle">Washington Headquarter Services</a></h3>
+<h3><a href="project-single2.html" class="tittle">Washington Headquarter Services</a></h3>
 </div>
 </div>
 <div class="project-item">
