--- a/project-single2.html
+++ b/project-single2.html
@@ -123,8 +123,8 @@
 <h2>Washington Headquarter Services, Pentagon Renovation Program</h2>
 <p>j3Is is a different kind of electrical practice. Founded by Charles Wesley Jackson , we’re an employee-owned firm pursuing a democratic design process that values everyone’s input.</p>
 <ul class="project-details">
-<li><span>Project Size:</span>: $30 million for more than 10 million square feet of WHS owned and leased facilities.</li>
-<li><span>Location</span>:  Arlington, VA</li>
+<li><span>Project Size:</span>$30 million for more than 10 million square feet of WHS owned and leased facilities.</li>
+<li><span>Location:</span>Arlington, VA</li>
 <li><span>Nature of the project:</span>Due to the constant renovation at the Pentagon and the surrounding facilities, I was employed as a Commissioning and Code Enforcement, Project Manager. 
   I was in charge of program wide commissioning and code enforcement for all projects. As Senior Project Manager for the project I provided both classified and unclassified LEED Enhanced Commissioning and code enforcement services supporting multiple branches of the WHS. 
   I performed complex, mission critical services for electrical, access control, physical security and life safety systems. I was able to execute approximately 40 concurrent projects at three primary locations.</li>
