--- a/project-single2.html
+++ b/project-single2.html
@@ -123,9 +123,9 @@
 <h2>Washington Headquarter Services, Pentagon Renovation Program</h2>
 <p></p>
 <ul class="project-details">
-<li>Project Size:$30 million for more than 10 million square feet of WHS owned and leased facilities.</li>
+<li><span>Project Size:</span>$30 million for more than 10 million square feet of WHS owned and leased facilities.</li>
 <li><span>Location:</span>Arlington,VA</li>
-<li><span>Nature of the project:</span>Due to the constant renovation at the Pentagon and the surrounding facilities, I was employed as a Commissioning and Code Enforcement, Project Manager. 
+<li><span>Project Nature:</span>Due to the constant renovation at the Pentagon and the surrounding facilities, I was employed as a Commissioning and Code Enforcement, Project Manager. 
   I was in charge of program wide commissioning and code enforcement for all projects. As Senior Project Manager for the project I provided both classified and unclassified LEED Enhanced Commissioning and code enforcement services supporting multiple branches of the WHS. 
   I performed complex, mission critical services for electrical, access control, physical security and life safety systems. I was able to execute approximately 40 concurrent projects at three primary locations.</li>
 <li><span>What challenges did we overcome?:</span>The Pentagon is a 24 hour facility, so we had to deal with the logistics of performing construction while people are working. Also there are any number of multi-faceted and complex projects happening for other groups and departments at the same time. I had to coordinate with these other teams and the whole building for the overall masterplan and vision.
