--- a/project-single2.html
+++ b/project-single2.html
@@ -127,8 +127,10 @@
 <li><span>Location:</span>Arlington,VA</li>
 <li><span>Project Nature:</span>Due to the constant renovation at the Pentagon and the surrounding facilities, I was employed as a Commissioning and Code Enforcement, Project Manager. 
   I was in charge of program wide commissioning and code enforcement for all projects. As Senior Project Manager for the project I provided both classified and unclassified LEED Enhanced Commissioning and code enforcement services supporting multiple branches of the WHS. 
-  I performed complex, mission critical services for electrical, access control, physical security and life safety systems. I was able to execute approximately 40 concurrent projects at three primary locations.</li>
-<li><span>What challenges did we overcome?:</span>The Pentagon is a 24 hour facility, so we had to deal with the logistics of performing construction while people are working. Also there are any number of multi-faceted and complex projects happening for other groups and departments at the same time. I had to coordinate with these other teams and the whole building for the overall masterplan and vision.
+  I performed complex, mission critical services for electrical, access control, physical security and life safety systems.
+            I was able to execute approximately 40 concurrent projects at three primary locations.</li>
+            
+<li><span>Challenges we overcame?:</span>The Pentagon is a 24 hour facility, so we had to deal with the logistics of performing construction while people are working. Also there are any number of multi-faceted and complex projects happening for other groups and departments at the same time. I had to coordinate with these other teams and the whole building for the overall masterplan and vision.
   It was another great lesson in juggling complex projects with groups who often have competing objectives and projects who share some resources</li>
 <li><span>Project Year</span>: 2019/2020</li>
 </ul>
