--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </div>
 </div>
 <div class="single-slide">
-<div class="bg-img kenburns-top-right" style="background-image: url(img/slider-2.jpg);"></div>
+<div class="bg-img kenburns-top-right" style="background-image: url(img/construction.jpg);"></div>
 <div class="overlay"></div>
 <div class="slider-content-wrap d-flex align-items-center text-center">
 <div class="container">
