--- a/blog-grid.html
+++ b/blog-grid.html
@@ -222,7 +222,7 @@
 <div class="row">
 <div class="col-lg-3 col-sm-6 sm-padding">
 <div class="widget-content">
-<a href="#"><img src="img/J3I-02.png" alt="brand"></a>
+<a href="#"><img src="img/J3I-03.png" alt="brand"></a>
 <p></p>
 </div>
 </div>
@@ -238,10 +238,10 @@
 </div>
 <div class="col-lg-3 col-sm-6 sm-padding">
 <div class="widget-content">
-<h4>Headquaters</h4>
-<p>962 Fifth Avenue, 3rd Floor New York, NY10022</p>
+<h4>Location</h4>
+<p> P.O. Box 960 Bowie, MD 20718</p>
 <span><a href="" class="__cf_email__" data-cfemail=""></a></span>
-<span>(+123) 456 789 101</span>
+<span>240-376-0220</span>
 </div>
 </div>
 <div class="col-lg-4 col-sm-6 sm-padding">
