--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
 <div class="row d-flex align-items-center">
 <div class="col-lg-8 col-md-6">
 <div class="section-heading mb-40">
-<span>Projects</span>
-<h2>Discover the most fascinating <br>projects for our clients</h2>
+<h2>Projects</h2>
+<span>Discover the most fascinating <br>projects for our clients</span>
 </div>
 </div>
 <div class="col-lg-4 col-md-6 text-right">
