--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </div>
 </div>
 <div class="single-slide">
-<div class="bg-img kenburns-top-right" style="background-image: url(img/construction.jpg);"></div>
+<div class="bg-img kenburns-top-right" style="background-image: url(img/slider-2.jpg);"></div>
 <div class="overlay"></div>
 <div class="slider-content-wrap d-flex align-items-center text-center">
 <div class="container">
@@ -290,7 +290,7 @@
 <div class="col-lg-8 col-md-6">
 <div class="section-heading mb-40">
 <h2>PROJECTS</h2>
-<h2>Discover the most fascinating <br>projects for our clients</h2>
+<span>Discover the most fascinating <br>projects for our clients</span>
 </div>
 </div>
 <div class="col-lg-4 col-md-6 text-right">
@@ -346,8 +346,8 @@
 </div>
 <div class="col-lg-6 sm-padding">
 <div class="content-info wow fadeInRight" data-wow-delay="300ms">
-<span>The Founder</span>
-<h2>The Genius behind J3Is</h2>
+<h2>The Founder</h2>
+<span>The Genius behind J3Is</span>
 <p>Charles Wesley Jackson III, PE, PMP, CxA, CEM grew up in Philadelphia, PA and a graduate of Drexel University (Class of 2005) with a Bachelor of Science in Electrical Engineering and a minor in Business Management.</p>
 <a href="about-us.html" class="default-btn">Know More</a>
 </div>
@@ -359,8 +359,8 @@
 <section class="blog-section padding">
 <div class="container">
 <div class="section-heading text-center mb-40 wow fadeInUp" data-wow-delay="100ms">
-<span>From Blog</span>
-<h2>Speciallized news</h2>
+<h2>From Blog</h2>
+<span>Speciallized news</span>
 </div>
 <div class="row blog-wrap">
 <div class="col-lg-4 col-sm-6 sm-padding">
