--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 <section class="service-section bg-grey padding">
 <div class="dark-bg"></div>
 <div class="section-heading dark-background text-center mb-40 wow fadeInUp" data-wow-delay="100ms">
-<span>Services</span>
-<h2>Take the world’s best <br> services with you</h2>
+<h2>Services</h2>
+<span>Take the world’s best services with you</span>
 </div>
 <div class="container">
 <div class="row">
@@ -290,7 +290,7 @@
 <div class="col-lg-8 col-md-6">
 <div class="section-heading mb-40">
 <h2>PROJECTS</h2>
-<span>Discover the most fascinating <br>projects for our clients</span>
+<span>Discover the most fascinating projects for our clients</span>
 </div>
 </div>
 <div class="col-lg-4 col-md-6 text-right">
