--- a/about-us.html
+++ b/about-us.html
@@ -114,21 +114,21 @@
 <li class="about-promo-item wow fadeInUp">
 <i class="flaticon-factory"></i>
 <div>
-<h3>Professional Liability</h3>
+<h3>Innovation</h3>
 <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
 </div>
 </li>
 <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
 <i class="flaticon-worker"></i>
 <div>
-<h3>Dedicated To Our Clients</h3>
+<h3>Inspiration</h3>
 <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
 </div>
 </li>
 <li class="about-promo-item wow fadeInUp" data-wow-delay="500ms">
 <i class="flaticon-gear"></i>
 <div>
-<h3>Outstanding Services</h3>
+<h3>Integrity</h3>
 <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
 </div>
 </li>
