--- a/about-us.html
+++ b/about-us.html
@@ -112,14 +112,14 @@
 <div class="col-lg-6 sm-padding">
 <ul class="about-promo">
 <li class="about-promo-item wow fadeInUp">
-<i class="flaticon-factory"></i>
+<i class="flaticon-innovation"></i>
 <div>
 <h3>Innovation</h3>
 <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
 </div>
 </li>
 <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
-<i class="flaticon-worker"></i>
+<i class="flaticon-inspiration"></i>
 <div>
 <h3>Inspiration</h3>
 <p>We are committed to building a sustainable future by fostering a collaborative spirit.</p>
